--- a/apps/.gitignore
+++ b/apps/.gitignore
@@ -1,20 +1,19 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
-/node_modules
-/.pnp
+node_modules
+.pnp
 .pnp.js
-.yarn/install-state.gz
+.pnpm-store
 
 # testing
-/coverage
+coverage
 
 # next.js
-/.next/
-/out/
-
-# production
-/build
+.next/
+out/
+build
+dist/
 
 # misc
 .DS_Store
@@ -26,11 +25,21 @@ yarn-debug.log*
 yarn-error.log*
 
 # local env files
-.env*.local
+.env
+!packages/chain/src/environments/*/.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# turbo
+.turbo
 
 # vercel
 .vercel
 
-# typescript
-*.tsbuildinfo
-next-env.d.ts
+# intellij
+.idea
+starter-kit.iml
+
+docker/data
